changes for learning pipe

--- a/src/app/nested-components/customer-detail/customer-detail.component.html
+++ b/src/app/nested-components/customer-detail/customer-detail.component.html
@@ -1,4 +1,8 @@
-<h3><button (click)="moveLeft()" type="button"><</button> {{customer.name}}<button (click)="moveRight()" type="button">></button> </h3>
+<h3>
+    <button (click)="moveLeft()" type="button">
+        <</button> {{customer.name}}
+            <button (click)="moveRight()" type="button">></button>
+</h3>
 
 <div *ngIf="customer">
     <fieldset>
@@ -8,7 +12,8 @@
         <label class="inline-block" for="">you are in {{customer.address.region}}</label>
     </fieldset>
     <fieldset>
-        <label for="name">Name :</label> <input type="text" name="name" [(ngModel)]="customer.name">
+        <label for="name">Name :</label>
+        <input type="text" name="name" [(ngModel)]="customer.name">
         <app-customer-address [address]="customer.address"></app-customer-address>
     </fieldset>
 
