--- a/src/app/nested-components/customers-list/customers-list.component.html
+++ b/src/app/nested-components/customers-list/customers-list.component.html
@@ -6,5 +6,5 @@
 </ul>
 
 <div *ngIf="customer">
-    <app-customer-detail (shift)="shift($event)" [customer]="customer"> </app-customer-detail>
+    <app-customer-detail (shiftC)="shift($event)" [customer]="customer"> </app-customer-detail>
 </div>
